[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/second_level/GreenShip.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/second_level/SnowPlatform.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/second_level/PlatformGreen.gd" type="Script" id=3]
[ext_resource path="res://scenes/second_level/ObjectiveArea2.gd" type="Script" id=4]
[ext_resource path="res://assets/bg2.png" type="Texture" id=5]
[ext_resource path="res://assets/ferret.png" type="Texture" id=6]
[ext_resource path="res://scenes/second_level/GameOver2.gd" type="Script" id=7]
[ext_resource path="res://assets/FASTER2019-01-02_-_8_Bit_Menu_-_David_Renda_-_FesliyanStudios.com.mp3" type="AudioStream" id=8]
[ext_resource path="res://assets/error-sound-39539.mp3" type="AudioStream" id=9]
[ext_resource path="res://assets/yay-6120.mp3" type="AudioStream" id=10]
[ext_resource path="res://scenes/second_level/Meteor.gd" type="Script" id=11]
[ext_resource path="res://assets/meteorBrown_big1.png" type="Texture" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 47.5, 40 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 517.75, 10 )

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 862, -109, 0.594603, 23.1895, -0.594603, -23.1895, 875, -159, 0, 0, 0, 0, 1099, -136, -2.35969, -4.24743, 2.35969, 4.24743, 806, 72, 0, 0, 0, 0, 616, -351, 0, 0, 0, 0, 447, 372, 0, 0, 0, 0, 857, -99, 0, 0, 0, 0, 862, -109 )
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 37.5622, 30.4801 )

[node name="SecondLevel" type="Node"]
__meta__ = {
"_edit_horizontal_guides_": [ 302.0 ],
"_edit_vertical_guides_": [ 499.0 ]
}

[node name="PlatformGreen" type="Node2D" parent="."]
position = Vector2( 80, 564 )
script = ExtResource( 3 )

[node name="SnowPlatform" parent="PlatformGreen" instance=ExtResource( 2 )]
position = Vector2( -35, 0 )

[node name="SnowPlatform2" parent="PlatformGreen" instance=ExtResource( 2 )]
position = Vector2( 35, 0 )

[node name="GreenShip" parent="." instance=ExtResource( 1 )]
position = Vector2( 81, 152 )

[node name="ObjectiveArea2" type="Area2D" parent="."]
position = Vector2( 946, 47 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveArea2"]
position = Vector2( 10.5, 1 )
shape = SubResource( 1 )

[node name="MyLabel" type="Label" parent="ObjectiveArea2"]
margin_left = -656.0
margin_top = 249.0
margin_right = -238.0
margin_bottom = 263.0
text = "Hero's Mission:
Save The Ferret!"
align = 1
valign = 1

[node name="ferret" type="Sprite" parent="ObjectiveArea2"]
position = Vector2( 10, 2.5 )
scale = Vector2( 0.241379, 0.197917 )
texture = ExtResource( 6 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 506.567, 322.5 )
scale = Vector2( 1.00866, 0.629883 )
texture = ExtResource( 5 )

[node name="GameOver" type="Area2D" parent="."]
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameOver"]
position = Vector2( 509, 662 )
shape = SubResource( 2 )

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
autoplay = true

[node name="Success" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[node name="GameOverMusic" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -1, 5 )
stream = ExtResource( 9 )

[node name="Meteor" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="Path2D" type="Path2D" parent="Meteor"]
position = Vector2( -172, 328 )
curve = SubResource( 3 )

[node name="PathFollow2D" type="PathFollow2D" parent="Meteor/Path2D"]
position = Vector2( 862, -109 )
rotation = -1.13274

[node name="Sprite" type="Sprite" parent="Meteor/Path2D/PathFollow2D"]
position = Vector2( 69.5347, 19.4403 )
texture = ExtResource( 12 )

[node name="Meteor" type="Area2D" parent="Meteor/Path2D/PathFollow2D/Sprite"]
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Meteor/Path2D/PathFollow2D/Sprite/Meteor"]
position = Vector2( -0.93396, 0.357269 )
shape = SubResource( 4 )

[connection signal="body_entered" from="ObjectiveArea2" to="ObjectiveArea2" method="_on_ObjectiveArea2_body_entered"]
[connection signal="body_entered" from="GameOver" to="GameOver" method="_on_GameOver_body_entered"]
[connection signal="body_entered" from="Meteor/Path2D/PathFollow2D/Sprite/Meteor" to="Meteor/Path2D/PathFollow2D/Sprite/Meteor" method="_on_Meteor_body_entered"]
